--- a/index.html
+++ b/index.html
@@ -5,47 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake</title>
-    <link rel="manifest" href="manifest.webmanifest">
-
-    <style>
-        .background dark {
-
-            background-color: black
-        }
-    </style>
-
-
-
-
+    <title>Games</title>
 </head>
 
-<body style="width: 100%;">
-
-    <canvas id="canvas" width="480" height="480"></canvas>
-
-    <script src="game.js">
-
-
-    </script>
-
-    <br>
-    <footer style="border: solid black 4px; width: 325px;">
-
-        <div style="display: flex; gap: 25px; width: auto">
-            <button onclick="onclickUp()" style="width: 150px; height: 25px;" type="button" >Up</button>
-            <button onclick="onclickDown()" style="width: 150px; height: 25px;">Down</button>
-        </div>
-        <br>
-        <div style="display: flex; gap: 25px; width: auto">
-            <button onclick="onclickLeft()" style="width: 150px; height: 25px;" type="button" >Left</button>
-            <button onclick="onclickRight()" style="width: 150px; height: 25px;">Right</button>
-        </div>
-    </footer>
-
-
-
-
+<body style="width: 100%; background-color: grey;">
+    <div style="border: solid black 20px;">
+    <h1>Choose a Game:</h1>
+    <ul>
+        <li><a href="snake.html">Snake Game 001</a></li>
+    </ul>
+</div>
 </body>
-
 </html>
