--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div style="border: solid black 20px;">
     <h1>Choose a Game:</h1>
     <ul>
-        <li><a href="snake.html">Snake Game 001</a></li>
+        <li><a href="View/snake.html">Snake Game 001</a></li>
     </ul>
 </div>
 </body>
